--- a/vagrant/catalog/static/css/styles.css
+++ b/vagrant/catalog/static/css/styles.css
@@ -1,3 +1,52 @@
+* {
+	font-family: "Helvetica Neue Bold", Roboto, Helvetica, Arial, sans-serif;
+}
 body {
-    background: radial-gradient(ellipse at center, rgba(0,0,186,1) 0%, rgba(2,0,125,1) 50%, rgba(4,1,64,1) 100%);
+	overflow: hidden;
+	background: #d2d2d2;
+	height: 100%;
+}
+.header {
+	height: 100px;
+	font-family: 'Lobster', cursive;
+	font-size: 60px;
+	color: #fff;
+	align: center;
+	background-color: #000;
+}
+.main-container {
+	padding-top: 90px;
+	max-height: calc(100% - 90px);
+}
+.flash {
+	background-color: #000;
+	text-decoration: none;
+}
+.flash li {
+	list-style-type: none;
+	text-align: center;
+	font-size: 1rem;
+}
+.flash ul {
+	margin-bottom: 0;
+}
+.content {
+	background: #fff;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+.categories {
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+.category-link,
+.category-link a {
+	color: #6c757d !important;
+	text-decoration: none;
+}
+.detail-profile {
+	font-size: 10px;
+}
+.detail-profile img{
+	height: 50px;
 }
