--- a/vagrant/catalog/templates/catalog.html
+++ b/vagrant/catalog/templates/catalog.html
@@ -1,61 +1,43 @@
-<html>
-<head>
-    <link rel=stylesheet href="{{ url_for('static', filename='css/bootstrap.css') }}">
-    <link rel=stylesheet href="{{ url_for('static', filename='css/styles.css') }}">
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}" ></script>
-</head>
+{% extends "main.html" %}
+{% include "header.html" %}
+{% block content %}
 
-<body>
-<div class="container">
-    <div class="row">
-        <div class ="offset-3 col-6 h1 text-center text-white mb-5 mt-2">
-            Restaurants
-        </div>
-        <div class="offset-1 col-2 text-right mt-3">
-            <a role="button" class="btn btn-sm btn-success" href="{{url_for('new_restaurant')}}">Create New</a>
+<div class="row mt-5 border border-info h-100">
+    <div class="content col-3 pt-3 pb-5 h-100">
+        <div class="row categories border-right border-info">
+            <div class="col-12 h4">Categories</div>
+            {% for c in categories %}
+            <div class="col-12">
+                <a href="{{ url_for('show_items', category = c.name) }}" class="card-link">{{c.name}}</a>
+            </div>
+            {% endfor %}
         </div>
     </div>
+    <div class="content col-9 pt-3 pb-5 h-100">
+        <div class="row">
+            <div class="col-10 h4">
+                Latest Items
+            </div>
 
-    <div class="row">
-        <div class="col-12 alert-success">
-            {% with messages = get_flashed_messages() %}
-            {% if messages %}
-
-            <ul>
-                {% for message in messages %}
-                <li class="font-weight-bold"> {{ message }} </li>
-                {% endfor %}
-            </ul>
+            {%if 'username' in session %}
+            <div class="col-2 my-auto">
+                <a href="{{url_for('new_item')}}" class="btn btn-sm btn-outline-success" role="button" title="Add a new pedal">
+                    <i class="fas fa-plus-square pr-2"></i>Add New
+                </a>
+            </div>
             {% endif %}
-            {% endwith %}
-
         </div>
-    </div>
 
-    <div class="row">
-        {% for r in restaurants %}
-        <div class ="col-4">
-            <div class="card border-light bg-light mb-5">
-                <div class ="card-header">
-                    {{r.name}}
-                </div>
-
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-6">
-                            <a role="button" class="btn btn-sm btn-outline-success col-12" href="{{url_for('restaurant_menu', restaurant_id = r.id)}}">View Menu</a>
-                        </div>
-                        <div class="col-6">
-                            <a role="button" class="btn btn-sm btn-outline-success col-5" href="{{url_for('edit_restaurant',restaurant_id = r.id)}}">Edit</a>
-                            <a role="button" class="btn btn-sm btn-outline-success col-6" href="{{url_for('delete_restaurant', restaurant_id = r.id)}}">Delete</a>
-                        </div>
-                    </div>
-                </div>
+        {% for i in items %}
+        <div class="row">
+            <div class="col-12">
+                <a href="{{ url_for('item_details', category = i.category.name, title=i.title) }}" class="card-link">{{i.title}}</a>
+                <span class="pl-3 font-italic category-link">(<a href="{{ url_for('show_items', category = i.category.name) }}" class="">{{i.category.name}}</a>)</span>
             </div>
         </div>
         {% endfor %}
+
     </div>
 </div>
-</body>
 
-</html>
+{% endblock %}
