--- a/vagrant/catalog/templates/login.html
+++ b/vagrant/catalog/templates/login.html
@@ -1,36 +1,31 @@
-<head>
+{% extends "main.html" %}
+{% include "header.html" %}
+{% block content %}
 
-    <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
-    </script>
+<!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="//apis.google.com/js/platform.js?onload=start"> </script>
+<!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
 
-    <script src="//apis.google.com/js/platform.js?onload=start"> </script>
-
-    <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
-
-
-</head>
-
-
-<body>
-
-
-<!-- GOOGLE PLUS SIGN IN-->
-
-
-<div id="signinButton">
-      <span class="g-signin"
+<div class="row mt-5">
+    <div class="col-12 pt-3 pb-2 text-center">
+        <!-- GOOGLE PLUS SIGN IN -->
+        <div id="signinButton">
+            <span class="g-signin"
             data-scope="openid email"
-            data-clientid="227673585210-7t5sa2vtlpr66039bo9q7n2460alpkoj.apps.googleusercontent.com"
+            data-clientid="237930186968-1vtpjkj4t8i35kuodna0f8q0q3k5ma2e.apps.googleusercontent.com"
             data-redirecturi="postmessage"
             data-accesstype="offline"
             data-cookiepolicy="single_host_origin"
             data-callback="signInCallback"
             data-approvalprompt="force">
-      </span>
-</div>
+            </span>
+        </div>
 
-<div id="result"></div>
+        <div id="result"></div>
+
+    </div>
+</div>
 
 <script>
     function signInCallback(authResult) {
@@ -51,97 +46,18 @@
                     if (result) {
                         $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
                         setTimeout(function() {
-                            window.location.href = "/restaurant";
+                            window.location.href = "/catalog";
                         }, 4000);
-
-
                     } else if (authResult['error']) {
-
                         console.log('There was an error: ' + authResult['error']);
                     } else {
                         $('#result').html('Failed to make a server-side call. Check your configuration and console.');
                     }
-
                 }
-
-            }); } }
-</script>
-
-
-
-<!--END GOOGLE PLUS SIGN IN -->
-
-<!--FACEBOOK SIGN IN -->
-<script>
-    window.fbAsyncInit = function() {
-        FB.init({
-            appId      : '2022923294460004',
-            cookie     : true,  // enable cookies to allow the server to access
-                                // the session
-            xfbml      : true,  // parse social plugins on this page
-            version    : 'v2.2' // use version 2.2
-        });
-
-    };
-
-    // Load the SDK asynchronously
-    (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js";
-        fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-
-    // Here we run a very simple test of the Graph API after login is
-    // successful.  See statusChangeCallback() for when this call is made.
-    function sendTokenToServer() {
-        var access_token = FB.getAuthResponse()['accessToken'];
-        console.log(access_token)
-        console.log('Welcome!  Fetching your information.... ');
-        FB.api('/me', function(response) {
-            console.log('Successful login for: ' + response.name);
-            $.ajax({
-                type: 'POST',
-                url: '/fbconnect?state={{STATE}}',
-                processData: false,
-                data: access_token,
-                contentType: 'application/octet-stream; charset=utf-8',
-                success: function(result) {
-                    // Handle or verify the server response if necessary.
-                    if (result) {
-                        $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
-                        setTimeout(function() {
-                            window.location.href = "/restaurant";
-                        }, 4000);
-
-
-                    } else {
-                        $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-                    }
-
-                }
-
             });
-
-
-        });
+        }
     }
 </script>
 
-
-<button>
-
-
-    <fb:login-button scope="public_profile,email" onlogin="sendTokenToServer();">
-        <a href='javascript:sendTokenToServer()'>Login with Facebook</a>
-
-    </fb:login-button>
-
-
-</button>
-<!--END FACEBOOK SIGN IN -->
-
-</body>
-
-</html>
+<!--END GOOGLE PLUS SIGN IN -->
+{% endblock %}
