--- a/vagrant/catalog/templates/new_item.html
+++ b/vagrant/catalog/templates/new_item.html
@@ -1,16 +1,50 @@
-<html>
-<head>
-    <!--<link rel=stylesheet href="{{ url_for('static', filename='css/bootstrap.css') }}">-->
-    <!--<link rel=stylesheet href="{{ url_for('static', filename='css/styles.css') }}">-->
-    <!--<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}" ></script>-->
-</head>
+{% extends "main.html" %}
+{% include "header.html" %}
+{% block content %}
+<div class="row mt-5 border border-info">
+    <div class="content col-12 pt-3 pb-2 h-100">
+        <div class="row">
+            <div class="col-11 offset-1 h4">
+                Add a new pedal
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-8 offset-1 pb-4">
+                <form method = "post">
+                    <div class="form-group">
+                        <label for="title">Title:</label>
+                        <input id="title" name="title" type ="text" class="form-control form-control-sm" maxlength="80" value="{{ request.form['title'] }}" placeholder="Enter the pedal name here" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea id="description" name="description" class="form-control form-control-sm" rows="10" placeholder="Enter the pedal description here" required>{{ request.form['description'] }}</textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="category">Category</label>
+                        <select id="category" name="category" class="form-control form-control-sm col-4" required>
+                            {% if 'category' in request.form %}
+                            <option value="">Select pedal category</option>
+                            {% else %}
+                            <option value="" selected>Select pedal category</option>
+                            {% endif %}
 
-<body>
-<div class="container">
-    <div class="row">
-        This is the catalog page
+                            {% for c in categories %}
+                            {% if 'category' in request.form and c.id == request.form['category']|int() %}
+                            <option value="{{ c.id }}" selected>{{ c.name }}</option>
+                            {% else %}}
+                            <option value="{{ c.id }}">{{ c.name }}</option>
+                            {% endif %}
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary btn-sm" id="submit" type="submit">Submit</button>
+                        <a href="{{ url_for('catalog') }}" type="button" role="button" class="btn btn-secondary btn-sm" id="cancel">Cancel</a>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
-</body>
 
-</html>
+{% endblock %}
